# hallucide

./: .env.example  .gitignore  ANALYSE_TEST_JURISPRUDENCE.md  BLOCAGES.md  COMPRENDRE.md  Hallucide.html  Makefile  README.md  REORGANISATION.md  STATUS.md  pyproject.toml
.github/agents/: gem.agent.md
app/: README.md  presentation.py  server.py
app/static/: app.js  index.html  style.css
demarche/: README.md
demarche/etape_1_comprendre/: COMPRENDRE.md  PROCESSUS_FINAL.md
demarche/etape_2_front/: README.md  presentation.py  server.py
demarche/suivi/: BLOCAGES.md
docs/: 2026-06-22-hallucide-design.md  STATUS.md  da-prompt.md  design.md  spec-v4.md
docs/moteur/: COMPRENDRE.md  PROCESSUS_FINAL.md
examples/: run_audit_log.py  run_calibration.py  run_datagouv.py  run_document_mode.py  run_echo_back.py  run_gemini.py  run_human_validation.py  run_litellm.py  run_measurement.py  run_mistral.py  run_moulineuse.py  run_multi_hop.py  run_sentinel_guard.py  run_sovereign_log.py
hackathon-an-2026/: DEFI.md
mock/: index.html
src/: __init__.py  core.py
src/_1_decomposition/: orchestration.py
src/_2_coverage/: coverage.py
src/_3_retrieval/: file_retrieval.py
src/_4_verification/: verifier.py  (+1 more)
tests/: test_amendement.py  test_audit.py  test_calibration.py  test_claude_provider.py  test_commissions.py  test_core.py  test_coverage.py  test_datagouv.py  test_document.py  test_file_retrieval.py  test_gemini_provider.py  test_human_validation.py  test_interventions.py  test_litellm_provider.py  test_llm_adapter.py  test_llm_mock_provider.py  test_measurement.py  test_mistral_provider.py  test_moulineuse.py  test_multi_hop.py  test_multi_source.py  test_orchestration.py  test_rerank.py  test_semantic_similarity.py  test_slot_provenance.py  test_sovereign_log.py  test_triage_and_retrieval.py  test_verifier.py
ui/: index.html  server.py
webapp/: README.md  presentation.py  server.py
(+109 files in other folders)
