[project]
name = "sentinel_guard"
version = "0.1.0"
description = "Core pipeline for deterministic source fidelity verification and retrieval orchestration."
authors = [{name = "Sentinel Guard Team", email = "team@example.com"}]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["mcp>=1.27,<2"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
litellm = ["litellm>=1.90,<2", "truststore>=0.9"]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]